--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "postcss": "^8.1.14"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
         "jquery": "^3.7.1",
+        "laravel-vite-plugin": "^1.0.2",
+        "laravel-vue-pagination": "^4.1.3",
         "pinia": "^2.1.7",
         "sweetalert2": "^11.6.13",
+        "vite": "^5.2.7",
         "vue": "^3.4.18",
         "vue-router": "^4.2.5"
     }
