--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.7",
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "stripe/stripe-php": "^14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
