--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "@stripe/stripe-js": "^3.3.0",
         "@vitejs/plugin-vue": "^5.0.4",
         "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0.2",
